Add mobile slider navigation for presentation
Introduced a mobile-friendly slider for slide navigation, including new HTML elements, JavaScript logic to sync and control slides, and responsive CSS styles. The mobile slider appears on small screens, improving usability for mobile users by allowing direct slide selection and displaying the current and total slide numbers.

--- a/bootcamp/index.html
+++ b/bootcamp/index.html
@@ -717,6 +717,15 @@
             </div>
         </div>
     </div>
+    <!-- Mobile slider navigation -->
+    <div class="mobile-slider-container">
+        <input type="range" min="1" max="24" value="1" class="mobile-slider" id="mobileSlider">
+        <div class="mobile-slider-labels">
+            <span id="mobileSliderCurrent">1</span>
+            <span>/</span>
+            <span id="mobileSliderTotal">24</span>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
